fix(form-builder): move the handling of ensuring parent item visibility to the inputs that needs it.
When a document node value is beeing edited in a dialog we want to make sure the input/preview of the parent/enclosing is scrolled into view in the background. Originally we solved this by responding to changes in the first element of the focus path (e.g. the top most document field name), and whenever this changed, scroll to the dom element with this as the value for `data-focus-path`. As a consequence, opening an item for edit would scroll the editor to the path of the _parent input_ into view, and this would sometimes trigger a scroll jump actually scrolling the field out of view because scrollIntoView would ensure the top edge of the parent input was in view. Instead, what we really wanted was to have the edited _item_ in view.

As a bonus, this PR also adds a subtle focus ring on the background element that is currently being edited.

--- a/packages/@sanity/form-builder/src/inputs/ArrayInput/item/ArrayInputListItem.css
+++ b/packages/@sanity/form-builder/src/inputs/ArrayInput/item/ArrayInputListItem.css
@@ -13,11 +13,15 @@
   background: var(--component-bg);
   border-radius: var(--border-radius-small);
   padding: calc(var(--extra-small-padding) - 1px);
-  transition: box-shadow 100ms;
+  transition: box-shadow 250ms;
 
   @nest :global(.ArrayInput__moving) & {
     box-shadow: 0 0 0 1px var(--hairline-color), 0 8px 17px 2px var(--shadow-color-umbra),
       0 3px 14px 2px var(--shadow-color-penumbra), 0 5px 5px -3px var(--shadow-color-ambient);
+  }
+
+  @nest [aria-selected='true'] & {
+    box-shadow: 0 0 0 1px var(--selected-item-color);
   }
 }
 
